fix issues where table headers not aligned in listview

--- a/Workflow/App_Plugins/Workflow/Backoffice/css/listview.scss
+++ b/Workflow/App_Plugins/Workflow/Backoffice/css/listview.scss
@@ -3,6 +3,11 @@
 // listview for history views
 .umb-table {
     border-radius:3px;
+
+    &__name {
+        flex-basis:20%;
+        max-width:20%;
+    }
 }
 
 .umb-table-cell {
@@ -10,8 +15,12 @@
         margin: 0;
     }
 
-    &.show-overflow, &.show-overflow > * {
-        overflow: visible;
+    &.show-overflow {
+        overflow:visible;
+        flex: 0 0 140px;
+        > * {
+            overflow: visible;
+        }
     }
 }
 
